--- a/docs/Rapport/main.tex
+++ b/docs/Rapport/main.tex
@@ -76,17 +76,17 @@
 
 %Introduction 1/2 pages
 \chapter{Introduction} %Partie présentation
-Dans le cadre du TER de notre deuxième année à la faculté des sciences de Montpellier nous avons proposé notre propre projet s'intitulant PunyDuck. C'est une plate-forme de distribution des projets des étudiants du département informatique.\\
+Dans le cadre du TER de notre deuxième année à la faculté des sciences de Montpellier nous avons proposé un projet s'intitulant PunyDuck. C'est une plate-forme de distribution des projets des étudiants du département informatique.\\
 
 Le groupe de développement est composé de cinq personnes, Valentin \textsc{FONTAINE}, Paul \bsc{BUNEL}, Valentin \bsc{PERON}, Julien \bsc{LEBARON} et Esteban \bsc{BARON}. Nous sommes encadré par Mme Anne-Elisabeth \bsc{BAERT}.
 
 \vspace{1cm}
 \textbf{\huge{}{Motivation}}\\
 
-Le TER est un module qui apporte beaucoup aux étudiants en gestion de projet ainsi qu'en programmation. Seulement une fois terminés les projets ne sont pas valorisés et tombent dans l'oubli. Notre solution est de proposer une application permettant à chaque étudiants de déposer ses projets pour les rendre visibles et téléchargeables par tous.
+Le TER est un module qui apporte beaucoup aux étudiants en gestion de projet ainsi qu'en programmation. Seulement une fois terminés les projets ne sont pas valorisés et tombent dans l'oubli. Notre solution est de proposer une application permettant à chaque étudiants de déposer leurs projets pour les rendre visibles et téléchargeables par tous.
 
 \vspace{1cm}
-\textbf{\huge{}{Approches}}\\
+\textbf{\huge{}{Approches}}\\ %Esteeeeeeeeeeee petit passage en plus
 
 Les différentes approches faces a notre problématique
 
@@ -144,16 +144,48 @@ V - Le site
 
 %Partie 2 Partie technologies utilisées 1/2 pages
 \chapter{Technologies utilisées}
-\section{Langages et outils}
-\section{Pourquoi ce choix et quel intérêt ?} %titre peut-être à changer
+\section{Langages}
+Le choix du langage pour coder l'application a été le C/C++ pour sa fiabilité, son efficacité, et sa très grande possibilité d'utilisation. De plus le C++ nous a permis de coder en orienté objet, ainsi permettant la réalisation de l'application.
+Dans le cadre des UEs HLIN202 et HLIN302 basé sur le langage C++, cela nous a permis de partir sur ce choix de langage en étant rassurés. \\ % à reformuler 
+
+Pour gérer la partie réseau de notre application, nous n'avions pas besoin d'utiliser un langage puissant comme le C/C++, nous pouvions donc nous rabattre sur un langage moins performant mais plus facile d'accès.
+De ce fait, nous nous sommes dirigés vers le langage python, qui est un langage très simple d'utilisation, pratique pour débuter dans le domaine complexe de la programmation que représente la programmation en réseau. De surcroît il est plutôt efficace pour gérer les entrées sorties, notamment pour la lecture et l'écriture dans des fichiers, qui est une notion centrale dans notre projet.\\
+
+Cependant, le langage Python de base ne permet pas de faire de la programmation en réseau, nous avons donc du choisir une des nombreuses bibliothèques disponibles permettant de faire de la programmation réseau en Python. Après réflexion, nous avons opté pour le module « asyncio » pour deux raisons : premièrement, ce module offrait une interface de programmation en réseau de haut niveau donc plus simple d'utilisation, ce qui nous arrangeait particulièrement étant donné que nous sommes parfaitement novices dans ce domaine ; deuxièmement, le gros point fort de ce module est le fait qu'il implémente une nouvelle manière de programmer~: la programmation asynchrone. La programmation asynchrone pour les entrées/sorties est une forme de programmation parallèle permettant d'exécuter d'autres parties d'un programme lorsque celui-ci est en attente d'une transmission de donnée, afin de grandement diminuer le temps d'exécution du programme.
+\section{Outils} %outils utilisés pourquoi ce choix avantages ? postgresql
 
 %Partie 3 Développement logiciel 5/10 pages
 \chapter{Développement logiciel, Conception, Modélisation, Implémentation}
 \section{Présentation du développement}
 \section{Modélisation} %UML
 \section{Fonctionnalités de l'interface}
+%Je parle de ce qui devait être fait (j'ai pas mis les notification, ni personnalisation) si quelque chose ne peux être fait ou n'est pas fait d'ici la fin, enlever directement la partie en question.
+L'interface graphique se décompose de plusieurs fenêtres chacune spécifique d'autant plus que l'ensemble peux être personnalisable (placement de certains bloc présent sur l'interface). Pour la partie commune à chaque fenêtre de l'interface
+on a la barre des onglets contenant, dans cet ordre :
+\vspace{0.5cm}
+\begin{itemize}
+    \item "L'accueil", comprenant les lancements rapide d'application dernièrement utilisées ainsi que les nouveautés lié à l'application ou de certains projets.
+    \item Les "Projets", où l'ensemble des projets mis en ligne seront affichés. 
+    \item La "Collection", contenant les projets suivie et télécharger seront directement affichés.
+    \item Le "Profil" est l'endroit où l'on peut modifier ses données personnelles, sa page de profil et les paramètres de l'application.
+    \item Les "Contact", seront les différentes personnes suivie ou qui nous suive avec la possibilités d'échanger par message dans l'application.
+    \item La "Communauté" recensera l'ensemble des forums d'aides.
+    \item Le "Dépôt" vas servir à faire une demande de dépôt de projet, afin qu'il soit vérifier avant mise en ligne (pour éviter les dépôt de virus ou autre).
+    \item Icônes basique tel que épinglé, réduire et fermer. Mais contient aussi le mode nuit (fond clair qui devient foncé).
+\end{itemize}
+\vspace{0.5cm}
+La fonctionnalité principale étant d'aller sur la page projet, voir un qui nous intéresse ou faire une demande de dépôt pour notre projet. Maintenant cas par cas voyons les différentes interactions.\\
+Pour l'accueil il est possible de cliquer sur les articles mis en avant enfin de pouvoir les lires en détails, mais aussi les lancements rapides des derniers projet lancer en cliquant sur l'icône en question. Pour les projets, les fonctionnalitées qui changes sont les touches de tri et d'affichage ainsi que la barre rechercher. Pour la collection, c'est pareil sauf que l'on peux acceder à un menu d'action a coté de chaque projet (ressemblant à 3 petit points):
+\begin{itemize}
+    \item Désinstaller
+    \item Emplacement
+    \item Page projet
+    \item Désabonner / Ne plus suivre
+\end{itemize}
+Ainsi que les boutons d'action, lancer qui vas démarrer l'application, et installer qui vas télécharger et installer l'application.\\
+En ce qui concerne la page de présentation du projet, on peux interagir avec la notations (données une notes ou envoyé un commentaire) mais également un lien qui va envoyé vers un forum existant en lien avec le projet. On a notamment accès au bouton suivre pour l'avoir dans notre collection et le bouton j'aime pour aimé un projet.\\
+Les interactions avec l'interface concernant le profil sont, la modification de fond et de l'image de profil ainsi que des autres paramètres (nom, prénom, mot de passe,...), l'accès au paramètre du client (langue,emplacement,...) et le bouton de déconnexion. Pour l'interface communauté, on peux trié les différents forum (aide, suggestion, bugs, autres) ou encore en rechercher un. De plus on a le bouton d'ajout de forum.
 
-L'interface graphique se décompose de plusieurs différentes fenêtres chacune spécifique.
 
 \section{Format des données et procédure d'utilisation} % dnnées utilisées ou encore convention, décrire certaines procédures de lecture et de validation
 \section{Statistique} %nombres de classes/scripts/ lignes de code/ nombre de module
